--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # //we donot have to pass the env variables to git 
 PORT=8000
 CORS_ORIGIN=*
-MONGODB_URI=mongodb+srv://krishna:krishna123@cluster0.qxgwnh3.mongodb.net/
+MONGODB_URI=mongodb+srv://krishnarathi1052009_db_user:chaiaurcode@cluster0.ynwov48.mongodb.net/
